--- a/im_bird_sys/src/main/resources/application.yml
+++ b/im_bird_sys/src/main/resources/application.yml
@@ -17,11 +17,10 @@ spring:
     max-wait: 60000  #连接超时时间
     time-between-eviction-runs-millis: 60000 #间隔多久检查一次需要关闭的空闲连接
     validation-query: SELECT 'x'  #验证连接是否有效
-fdfs:
-  so-timeout: 1501
-  connect-timeout: 601
-  thumb-image:             #缩略图生成参数
-    width: 150
-    height: 150
-  tracker-list:            #TrackerList参数,支持多个
-    - 39.106.167.46:22122
+aliyun:
+  oss:
+    file:
+      endpoint:  oss-cn-beijing.aliyuncs.com
+      keyid: LTAI4G5Zf81jhYfrfZpzpfx2
+      keysecret: ukjsTIBpxy2WYlNxVtAhRct2SmJcNV
+      bucketname: gee-edu
